# nexcore-guardian-engine

./: Cargo.toml  README.md
src/: confidence.rs  config.rs  convergence.rs  dtree_adapter.rs  event_bus.rs  feedback.rs  governance.rs  grounding.rs  hierarchical.rs  hierarchy.rs  homeostasis.rs  incident.rs  insight_adapter.rs  lib.rs  patient_safety.rs  pattern_detector.rs  space3d.rs  spatial_bridge.rs  tov_types.rs
src/response/: cytokine.rs  hud.rs  mod.rs
src/sensing/: adversarial.rs  allostatic.rs  biological.rs  browser.rs  code_fingerprint.rs  code_health.rs  cytokine.rs  engram_drift.rs  hook_telemetry.rs  hud.rs  mod.rs  observability.rs  ribosome_damp.rs  signal_health.rs
tests/: hexim1_experiential.rs  integration.rs
